src/argocd/base/resources/argo-cd.http-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: http
      namespace: cilium
  hostnames:
  # Specific environment hostnames will be patched in overlays
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: argocd-server
          namespace: argocd
          port: 80
          weight: 100
      matches:
        - path:
            type: PathPrefix
            value: /
